# IChing

./: .env  .gitignore  er_diagram.drawio  er_diagram_v1.drawio  proof_of_concept.ipynb  pyproject.toml  submission  temp.pkl  test.py  webapp.js
app/: app.py  app_ys.py  database.py  main.py  models.py  models_ys.py  package-lock.json  package.json  schemas.py
app/routers/: auth.py  dashboard.py  friends.py  orders.py  payments.py  story.py  suan.py  transactions.py  users.py
app/src/: App.js
app/templates/: index.html
backend/: app.py  database.py  schemas.py  test.ipynb  wikiscraper.py
backend/inputs/: jia-tu-wikipedia-page.md  luke-eure.md  manon-audebert.md
templates/: dashboard.html  index.html  login.html  payment.html  payment_confirm.html  story.html  story_loading.html
webserver/: ._server.py
